tests/src/frontend/typechecking/invalid/whenparam_inherit13.sk
trait P<+T> {
  fun foo(f: (T, T) -> void): readonly this;
}
class C<+T>() uses P<T> {
  fun foo[T: frozen](_f: (T, T) -> void): this {
    C()
  }
}
